--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@nguniversal/express-engine": "^9.0.2",
+    "applicationinsights": "^1.8.8",
     "express": "^4.15.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
